# ai-hackathon-2025

./: LICENSE  README.md
backend/: app.py  models.py  pyproject.toml  routes.py  seeder.py
backend/controller/: comment.py  live_streaming.py  user.py  watch_time.py
backend/instance/: test.db
backend/voice/: voice.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: styles.css
frontend/src/components/: Navbar.vue  Sidebar.vue
frontend/src/router/: index.js
frontend/src/store/: auth.js
frontend/src/views/: Data.vue  Home.vue  Live.vue  Login.vue  Register.vue
