[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cy0802 <amyyoyo0802@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.7.1"
pymysql = "^1.1.1"
python-dotenv = "^1.1.0"
flask-bcrypt = "^1.0.1"
cryptography = "^44.0.2"
flask-cors = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
